--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.25",
     "next": "^12.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
@@ -23,10 +25,12 @@
     "@storybook/addon-essentials": "^6.5.9",
     "@storybook/addon-interactions": "^6.5.9",
     "@storybook/addon-links": "^6.5.9",
+    "@storybook/addons": "^6.5.9",
     "@storybook/builder-webpack5": "^6.5.9",
     "@storybook/manager-webpack5": "^6.5.9",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
+    "@storybook/theming": "^6.5.9",
     "@types/node": "^18.0.1",
     "@types/react": "^18.0.14",
     "babel-loader": "^8.2.5",
