--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.25",
+    "addon-screen-reader": "^1.8.6",
     "next": "^12.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
